fix: fix overflow-x problem

--- a/pages/pets/style.css
+++ b/pages/pets/style.css
@@ -21,7 +21,9 @@
 	padding:0;
 	box-sizing: border-box;
 }
-
+html,body{
+	overflow-x: hidden;
+}
 /*
 nav{
 	flex:1;
